crates/plotnik-tests/tests/04-emit/types/captures/bubbling_child_error_does_not_hide_builtin_error.txt
Q = (program
  (expression_statement
    (identifier) @dup
    (identifier) @dup
  ) @flag :: bool
)
------------------ DIAGNOSTICS -------------------
error: capture `@dup` already defined in this scope
 --> query.ptk:4:18
  |
3 |     (identifier) @dup
  |                  ---- first captured here
4 |     (identifier) @dup
  |                  ^^^^
  |
help: rename one capture, or use labeled alternatives to preserve which alternative matched

error: capture type `bool` requires a value that may be absent. This capture is always present
 --> query.ptk:5:11
  |
5 |   ) @flag :: bool
  |           ^^^^^^^
